--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.auth.SignUpActivity"></activity>
         <activity
             android:name=".ui.auth.LoginActivity"
             android:theme="@style/AppTheme" />
-        <activity android:name=".ui.splash.ActivitySplash"
+        <activity
+            android:name=".ui.splash.ActivitySplash"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
