--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.auth.SignUpActivity"></activity>
+        <activity android:name=".ui.auth.SignActivity"></activity>
         <activity
             android:name=".ui.auth.LoginActivity"
             android:theme="@style/AppTheme" />
