--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-<<<<<<< HEAD
+
         <activity android:name=".ui.home.HomeActivity"></activity>
-=======
-        <activity android:name=".ui.auth.SignUpActivity"></activity>
->>>>>>> 54f91645320b2e837f841b19897ac431bf204ff0
+
+        <activity android:name=".ui.auth.SignActivity"></activity>
+
         <activity
             android:name=".ui.auth.LoginActivity"
             android:theme="@style/AppTheme" />
